<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/logoFragmentLayout"
    android:background="@drawable/background_app"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/appName"
        android:contentDescription="@string/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/helloTraveler"
        android:layout_marginTop="34dp"
        app:srcCompat="@drawable/logo_slogan" />

    <TextView
        android:id="@+id/helloTraveler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/hello_traveler"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/editTextDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:background="@drawable/start_button"
        android:contentDescription="@string/start_button"
        android:fontFamily="@font/poppins_light"
        android:text="@string/start_button"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/globe"
        android:drawableTint="@color/black"
        android:padding="11dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/editTextDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="#30ffffff"
        android:drawableEnd="@drawable/destination"
        android:drawablePadding="5dp"
        android:drawableTint="#EFEBE9"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/destination"
        android:inputType="textWebEditText"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="horizontal"
        android:minHeight="48dp"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="#9E9E9E"
        android:textSize="17sp"
        android:autofillHints="@string/destination"
        android:textAlignment="viewEnd"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTraveler" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="#30ffffff"
        android:drawableEnd="@drawable/calender"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/date"
        android:inputType="textWebEditText"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="horizontal"
        android:minHeight="48dp"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="#9E9E9E"
        android:textSize="17sp"
        android:textAlignment="viewEnd"
        android:autofillHints="@string/date"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startButton" />
</androidx.constraintlayout.widget.ConstraintLayout>