<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sectionFragmentLayout"
    android:background="#262627"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/appName"
        android:contentDescription="@string/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="5sp"
        android:padding="20dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/app_name" />

    <TextView
        android:id="@+id/sectionTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="Section"
        android:textColor="#AA92D6"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintBottom_toTopOf="@id/inputText"/>

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/plane264"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/empty_section_content_placeholder"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:autofillHints="@string/empty_section_content_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionTitle" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/save_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:drawableEnd="@android:drawable/ic_menu_save"
        android:drawableTint="@color/black"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/returnButton"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/return_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/return_to_menu"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:drawableEnd="@android:drawable/ic_menu_revert"
        android:drawableTint="@color/black"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/inputText"
        app:layout_constraintEnd_toEndOf="@+id/inputText"
        app:layout_constraintStart_toStartOf="@+id/inputText"
        app:layout_constraintTop_toTopOf="@+id/inputText" />

</androidx.constraintlayout.widget.ConstraintLayout>